@@ -1,0 +1,14 @@
+<p>
+    UCLUST is a program for very-high speed sequence clustering, alignment and search. It is orders of magnitude faster than BLAST for some search applications. 
+</p>
+<h3>input</h3>
+<p>
+    Input to the uclust component is a well-formed FASTA or multi-FASTA file.
+</p>
+<h3>implemented options</h3>
+<p>
+    The identity threshold can be controlled via the IDENTITY_THRESHOLD parameter and the sorting algorithm can be controlled via the SORT_ALGORITHM parameter.
+</p>
+<h3>output</h3>
+<p>Output is a new FASTA file containing clustered sequences</p>   
+            
